add matcher filter for pairs endpoint
